...
            android:textSize="18sp"
            android:paddingTop="12dp"
            android:paddingBottom="4dp"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/selected_users_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:paddingBottom="40dp"
...
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/confirm_and_notify_button"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/confirm_and_notify_button"
                android:textColor="@color/white"
                android:textSize="16sp"
...
