...
            app:titleTextColor="@android:color/white"
            android:paddingTop="10sp"
            app:titleCentered="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true" />
    </LinearLayout>

...
