...
            app:destination="@id/organizerEventPageFragment" />
        <action
            android:id="@+id/action_homeFragment_to_createEventFragment"
            app:destination="@id/createEventFragment" />
        <action
            android:id="@+id/action_homeFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/organizerEventPageFragment"
        android:name="com.example.lotteryevent.ui.organizer.OrganizerEventFragment"
        android:label="Event Details"
        tools:layout="@layout/fragment_organizer_event_page">
        <action
            android:id="@+id/action_organizerEventPageFragment_to_entrantMapFragment"
            app:destination="@id/entrantMapFragment" />
        <action
            android:id="@+id/action_organizerEventPageFragment_to_runDrawFragment"
            app:destination="@id/runDrawFragment"/>
        <action
            android:id="@+id/action_organizerEventPageFragment_to_entrantListFragment"
            app:destination="@id/entrantListFragment" />

        <argument
            android:name="eventId"
...
