<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.UserProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Name Field -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_field"
                android:textColor="@color/primary_green"
                android:textSize="16sp"
                android:paddingTop="8dp" />

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_field_background"
                android:hint="@string/mock_name"
                android:padding="12dp"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <!-- Email Field -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_field"
                android:textColor="@color/primary_green"
                android:textSize="16sp"
                android:paddingTop="16dp" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_field_background"
                android:hint="@string/mock_email"
                android:padding="12dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <!-- Phone Field -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_field"
                android:textColor="@color/primary_green"
                android:textSize="16sp"
                android:paddingTop="16dp" />

            <EditText
                android:id="@+id/phone_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_field_background"
                android:hint="@string/mock_number"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <!-- Notification Checkbox -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_field"
                android:textColor="@color/primary_green"
                android:textSize="16sp"
                android:paddingTop="20dp" />

            <CheckBox
                android:id="@+id/notifications_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingTop="8dp"
                android:text="@string/notification_statement"
                android:textColor="@color/grey" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/update_button"
                android:backgroundTint="@color/primary_pink"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:layout_marginTop="24dp"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                android:radius="30dp" />

            <Button
                android:id="@+id/history_button"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/primary_green"
                android:radius="30dp"
                android:strokeWidth="2"
                android:text="@string/reg_history_button"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="207dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/primary_pink"
                android:radius="30dp"
                android:textSize="18sp"
                android:text="@string/delete_button"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>